# STT-whisper

./: .gitignore  .gitmodules  ANDROID_PORT_PLAN.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_ISSUES_FOUND.md  MODEL_STRATEGY.md  PROGRESS.md  PROGRESS_LOG.md  README.md  download_whisper_models.ps1  pyproject.toml
.claude/: settings.local.json
android/: .gitignore  BUILD_NOTES.md  PHASE1_TESTING.md  README.md  WHISPER_INTEGRATION.md  WHISPER_SETUP.md  build.gradle.kts  clean-build.ps1  gradle.properties  settings.gradle.kts  verify_core_logic.kts
android/app/: build.gradle.kts
android/gradle/wrapper/: gradle-wrapper.properties
android/whisperlib/: build.gradle.kts
desktop/: pyproject.toml
desktop/examples/: vad_demo.py
desktop/tests/: conftest.py  test_chunk_buffer.py  test_file_ops.py  test_main.py  test_service.py  test_transcription.py  test_ui.py
desktop/tests/test_data/: README.md
desktop/voice_input_service/: __main__.py
desktop/voice_input_service/core/: model_manager.py  whisper_cpp.py
desktop/voice_input_service/ui/: window.py
desktop/voice_input_service/utils/: file_ops.py  lifecycle.py  logging.py  silence_detection.py
docs/: ADVANCED_OPTIMIZATIONS.md  APP_VISION.md  BARE_WHISPER_OPTIMIZATION.md  CRITICAL_FIXES_IMPLEMENTED.md  CURRENT_STATUS_2025_10_26.md  DEVELOPMENT_NOTES.md  KNOWN_ISSUES.md  MIGRATION_TO_ONNX_RUNTIME.md  NEXT_STEPS.md  ONNX_CLEANUP_COMPLETE.md  ONNX_MIGRATION_COMPLETE.md  PERFORMANCE_INVESTIGATION.md  PROJECT_STATUS.md  README.md  URGENT_PERFORMANCE_FIXES.md  VOICE_INPUT_SPECS.md  current_system_flow.md  fix_current_issues.md  index.md  possible_unaccounted.md
docs/android/: ANDROID_PERFORMANCE_OPTIMIZATIONS.md  FRONTEND_SPECS.md  FRONTEND_SPECS_SIMPLIFIED.md  SETTINGS_IMPLEMENTATION_COMPLETE.md  SETTINGS_UX_DESIGN.md  TESTING_REPORT_2025_10_26.md
docs/android/archive/: IME_IMPLEMENTATION.md  IME_USER_GUIDE.md  QUICKSTART.md
docs/api/: README.md
docs/architecture/: README.md
docs/assets/: README.md
docs/core/: README.md
docs/development/: README.md  component_analysis.md
docs/user_guide/: README.md
tests/: test_audio.py  test_chunk_buffer.py  test_config.py  test_file_ops.py  test_main.py  test_model_manager.py  test_processing.py  test_service.py  test_text_processor.py  test_transcription.py  test_ui.py  test_utils.py
voice_input_service/: __init__.py  __main__.py  config.py  service.py
voice_input_service/core/: audio.py  chunk_buffer.py  config.py  model_manager.py  processing.py  transcription.py  whisper_cpp.py
voice_input_service/ui/: dialogs.py  events.py  window.py
voice_input_service/utils/: clipboard.py  file_ops.py  logging.py  silence_detection.py  text_processor.py
(+58 files in other folders)
